css/main.css
@font-face {
  font-family: "Avenger";
  src: url("/fonts/the-fontry_avengeance/AVENGEANCE.otf");
  /*src: url("/fonts/Comix-Loud.ttf");*/
}

body {
  /*background: "turquoise";*/
  background-image: url("http://graphicpolicy.files.wordpress.com/2013/06/xmen_battleoftheatom_1_variantcho.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  /*background-position: center center;*/
  font-family: "Avenger";
  text-align: center;
  color: red;
}

.cell {
  background: rgba(133, 248, 172, 0.95);
  width: 105px;
  height: 105px;
  font-size: 1.5em;
  float: left;
  border: 2px solid purple;
  border-radius: 14px;
  margin: auto;

}

.board {
  background: #F21545;
  width: 456px;
  height: 456px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: auto;
  margin-right: auto;
  border: 3px solid purple;
  padding: 15px;
}

.row0 {
  25px;
}

.game-container {
  margin-top: 10px;
}

.cell > div {
  background-color: ;
  margin-top: 36px
}

#startGame {
  width: 200px;
  height: 40px;
}

#reset {
  width: 100px;
  height: 40px;
}

.val-2 {background: url(/Imagery/SILVER_SURFER.png); }
.val-4 {background: url(/Imagery/DEADPOOL.png); }
.val-8 {background: url(/Imagery/CABLE.png); }
.val-16 {background: url(/Imagery/WOLVERINE.png); }
.val-32 {background: url(/Imagery/THE_HUMAN_TORCH.png); }
.val-64 {background: url(/Imagery/GAMBIT.png); }
.val-128 {background: url(/Imagery/STORM.png); }
.val-256 {background: url(/Imagery/INVISIBLE WOMAN.png); }
.val-512 {background: url(/Imagery/ICEMAN.png); }
.val-1024 {background: url(/Imagery/MISTER_FANTASTIC.png); }
.val-2048 {background: url(/Imagery/BEAST.png); }
.val-4096 {background: url(Imagery/JEAN_GREY.png); }
.val-8192 {background: url(Imagery/DARK_PHOENIX.png); }

